# fastapi_test

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  docker-compose-deploy.yaml  docker-compose.yml  pyproject.toml  release-please-config.json  setup.sh
.github/workflows/: standard.yml
src/: main.py
